Updated author information

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Victor Gryshko",
-      "email": "stalin1945@gmail.com"
+      "name": "Paul Klimov",
+      "email": "pklimov@quartsoft.com"
     }
   ],
   "minimum-stability": "dev",
